--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -21,7 +21,7 @@
     "not_applicable": "N/A"
   },
   "landing_page": {
-    "headline": "Trade, borrow and save using Dai.",
+    "headline": "Trade, borrow, and save using Dai.",
     "trade_card": {
       "title": "Trade",
       "description": "Place orders in the Marketplace, or simply exchange your tokens instantly for what's available.",
@@ -29,7 +29,7 @@
     },
     "borrow_card": {
       "title": "Borrow",
-      "description": "Lock your tokens as collateral to generate Dai, a decentralized cryptocurrency pegged to 1 USD.",
+      "description": "Lock your tokens as collateral to generate Dai, a decentralized stablecoin soft-pegged to 1 USD.",
       "button": "Borrow Dai"
     },
     "save_card": {
@@ -38,17 +38,17 @@
       "button": "Save Dai"
     },
     "token_section_title": "Currently supported by Oasis Trade",
-    "section1_title": "What's the Story",
-    "section1_p": "Oasis is a platform for decentralized finance. Use it to trade tokens, borrow Dai and earn savings — all in one place.",
+    "section1_title": "What is Oasis?",
+    "section1_p": "Oasis is a platform for decentralized finance. Use it to trade tokens, borrow Dai, and earn savings — all in one place.",
     "section2_title": "Secure protocol built on Ethereum",
     "section2_p": "Oasis is built on top of audited and formally verified smart contracts created by Maker, the industry leader in secure decentralized finance.",
-    "section3_title": "Completely Permissionless",
-    "section3_p": "Anyone can access the system simply by using an ethereum supported wallet. Oasis is a decentralized, non-custodial platform. We can never touch or control your assets.",
+    "section3_title": "Completely permissionless",
+    "section3_p": "Oasis is a decentralized, non-custodial platform, accessible using an Ethereum-supported wallet. You—and only you—control your assets.",
     "questions_title": "Questions",
     "question1": "What is Oasis?",
-    "answer1": "Oasis is a decentralized application which runs on the Ethereum blockchain. Allowing anyone to trade tokens, borrow against them and earn savings using Dai.",
+    "answer1": "Oasis is a decentralized application that runs on the Ethereum blockchain. Anyone can use Oasis to trade tokens, borrow against them, and earn savings using Dai.",
     "question2": "What is Dai?",
-    "answer2": "Dai is a stablecoin soft pegged to the US Dollar. It aims to be 1 Dai = $1 USD, but this can vary slightly. Read more {0}.",
+    "answer2": "Dai is the world’s first unbiased currency and leading decentralized stablecoin soft-pegged to the US Dollar. Learn more about Dai {0}.",
     "answer2_link1_url": "https://makerdao.com/dai/",
     "answer2_link1_text": "here",
     "question3": "Do I need an account?",
@@ -57,22 +57,22 @@
     "answer3_link1_text": "Metamask",
     "answer3_link2_url": "https://wallet.coinbase.com/",
     "answer3_link2_text": "Coinbase Wallet",
-    "question4": "Why are Borrow and Save not yet available?",
-    "answer4": "Borrow and Save are features coming with the launch of Multi-Collateral Dai. You can track {0}.",
+    "question4": "When will Borrow and Save be available?",
+    "answer4": "Borrow and Save will be released with the launch of Multi-Collateral Dai. Track Multi-Collateral Dai progress {0}.",
     "answer4_link1_url": "https://makerdao.com/roadmap/",
-    "answer4_link1_text": "Multi-Collateral Dai progress here",
-    "question5": "Is it secure?",
-    "answer5": "We conduct a range of audits on all of our smart contracts and the Oasis code is open-source.",
-    "question6": "Are there fees?",
-    "answer6": "Oasis does not charge any fees, although you will have to pay {0} and other fees associated with the Maker Protocol, such as Stability Fees.",
-    "answer6_link1_url": "https://kb.myetherwallet.com/en/transactions/what-is-gas/",
-    "answer6_link1_text": "gas",
-    "question7": "I have a question, how can I get in contact with you?",
-    "answer7": "You can reach the team by contacting us on {0}.",
+    "answer4_link1_text": "here",
+    "question5": "Is Oasis secure?",
+    "answer5": "Security is our top priority. The Oasis team regularly conducts audits on our smart contracts. In addition, the Oasis code is {0}, giving the community the ability to pressure test and audit the core technology.",
+    "answer5_link1_url": "https://github.com/OasisDEX",
+    "answer5_link1_text": "open-source",
+    "question6": "Will I be charged a fee to use Oasis?",
+    "answer6": "Oasis is free to use. However, you will have to pay gas and other fees associated with the Maker Protocol, such as Stability Fees.",
+    "question7": "How can I contact the Oasis team?",
+    "answer7": "You can reach the Oasis team by contacting us on {0}.",
     "answer7_link1_url": "https://chat.makerdao.com",
-    "answer7_link1_text": "our chat",
-    "question8": "What is Oasis?",
-    "answer8": "Oasis is a decentralized application which runs on the Ethereum blockchain. Allowing anyone to trade tokens, borrow against them and earn savings using Dai.",
+    "answer7_link1_text": "chat",
+    "question8": "Can I buy Bitcoin or Ethereum on Oasis using a credit card or via my bank account?",
+    "answer8": "You cannot buy crypto from your bank account using Oasis. Instead, you can use Dai to buy Ethereum and other supported tokens.",
     "read_only": "Read-Only",
     "wallet_connect": "Wallet Connect",
     "wallet_link": "Coinbase Wallet"
