CDP-444 Updating copy in 'Select Collateral Type'

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -6,7 +6,7 @@
     "current_price_information": "Current price information",
     "liquidation_penalty": "Liquidation penalty",
     "minimum_ratio": "Minimum ratio",
-    "stability_fee": "Stability fee",
+    "stability_fee": "Stability Fee",
     "current_price_info": "Current price information",
     "position": "position",
     "collateral": "collateral",
@@ -108,10 +108,9 @@
     "proxy_text": "Before creating your first CDP, you must create a personal proxy contract.",
     "insufficient_ilk_balance": "Insufficient {0} balance",
     "draw_too_much_dai": "CDP below liquidation threshold",
-    "stability_fee_description": "The fee calculated on top of the existing debt of the CDP. This is paid when paying back DAI.",
-    "liquidation_ratio_description": "The collateral-to-dai ratio at which a CDP becomes vulnerable to liquidation.",
-    "liquidation_penalty_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs.",
-
+    "stability_fee_description": "The fee calculated based on the outstanding debt of your vault. This is continuously added to your existing debt.",
+    "liquidation_ratio_description": "The collateral-to-dai ratio at which the vault becomes vulnerable to liquidation.",
+    "liquidation_fee_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs.",
     "waiting_for_comfirmations": "Waiting for confirmations... {0} of {1}",
     "confirmed_with_confirmations": "Confirmed with {0} confirmations",
     "waiting_for_confirmations_info": "Waiting for confirmations reduces the risk of your Maker Collateral Vault address changing. We require users to wait 10 block confirmations to ensure it's been created successfully. This will often take around 2 minutes.",
@@ -244,13 +243,13 @@
   "set_max": "Set max",
   "paste": "Paste",
   "cancel": "Cancel",
-  "stability_fee": "Stability fee",
-  "liquidation_penalty": "Liquidation fee",
+  "stability_fee": "Stability Fee",
+  "liquidation_fee": "Liquidation Fee",
   "collateral_debt_ceiling": "Debt ceiling",
   "dai_available": "DAI Available",
   "returned_auction": "returned from the auction",
   "liquidated_event": "Your CDP has been liquidated",
-  "liquidation_ratio": "Minimum liquidation ratio",
+  "liquidation_ratio": "Liquidation Ratio",
   "liquidation_price": "Liquidation price",
   "liquidation_penalty_shortened": "Liq Fee",
   "liquidation_ratio_shortened": "Liq ratio",
