CDP-444 Reverted keys liquidation_fee -> liquadtion_penalty

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -110,7 +110,7 @@
     "draw_too_much_dai": "CDP below liquidation threshold",
     "stability_fee_description": "The fee calculated based on the outstanding debt of your vault. This is continuously added to your existing debt.",
     "liquidation_ratio_description": "The collateral-to-dai ratio at which the vault becomes vulnerable to liquidation.",
-    "liquidation_fee_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs.",
+    "liquidation_penalty_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs.",
     "waiting_for_comfirmations": "Waiting for confirmations... {0} of {1}",
     "confirmed_with_confirmations": "Confirmed with {0} confirmations",
     "waiting_for_confirmations_info": "Waiting for confirmations reduces the risk of your Maker Collateral Vault address changing. We require users to wait 10 block confirmations to ensure it's been created successfully. This will often take around 2 minutes.",
@@ -245,7 +245,7 @@
   "paste": "Paste",
   "cancel": "Cancel",
   "stability_fee": "Stability Fee",
-  "liquidation_fee": "Liquidation Fee",
+  "liquidation_penalty": "Liquidation Fee",
   "collateral_debt_ceiling": "Debt ceiling",
   "dai_available": "DAI Available",
   "returned_auction": "returned from the auction",
