SAVE-42 save page CTA copy

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -206,7 +206,7 @@
     "withdraw_amount": "Withdraw amount",
     "deposit_dai": "Deposit DAI",
     "deposit_dai_subheading": "Start earning as soon as your deposit is confirmed.",
-    "get_started_title": "Open a Maker Vault to start earning DAI."
+    "get_started_title": "Start earning on your Dai today"
   },
   "verbs": {
     "depositing": "Depositing",
