--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -151,7 +151,7 @@
     "deposit_form_field3_after1": "Max at target ratio",
     "deposit_form_field3_after2": "Max avail to generate",
 
-    "confirm_title": "Confirm CDP",
+    "confirm_title": "Confirm Vault Details",
     "confirmed_title": "Your position is being created",
     "confirmed_text": "The estimated time is {0}. You can safely leave this page.",
     "post_confirmed_title": "Your position has been created",
@@ -198,7 +198,7 @@
   "actions": {
     "back": "Back",
     "continue": "Continue",
-    "create_cdp": "Create CDP",
+    "create_cdp": "Open Vault",
     "deposit": "Deposit",
     "withdraw": "Withdraw",
     "pay_back": "Pay back",
