CDP-442 updated _english.json with team

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -79,15 +79,15 @@
   },
   "overview_page": {
     "title": "Overview",
-    "your_cdps": "Your CDPs",
+    "your_cdps": "Your Vaults",
     "token": "TOKEN",
-    "id": "CDP ID",
+    "id": "VAULT ID",
     "ratio": "CURRENT RATIO",
     "ratio_mobile": "Ratio",
     "deposited": "DEPOSITED",
     "withdraw": "AVAIL. TO WITHDRAW",
-    "debt": "DAI DEBT",
-    "view_cdp": "View CDP",
+    "debt": "DAI",
+    "view_cdp": "View Vault",
     "view_cdp_mobile": "View",
     "total_collateral_locked": "total collateral locked",
     "total_dai_debt": "total dai debt",
@@ -103,8 +103,8 @@
     "read_only_mode": "Read-Only Mode",
     "price_feeds": "Price Feeds",
     "system_info": "System Info",
-    "active_cdps": "ACTIVE CDPS",
-    "active_cdps_figure": "{0} CDPs",
+    "active_cdps": "ACTIVE VAULTS",
+    "active_cdps_figure": "{0} Vaults",
     "global_debt_ceiling": "GLOBAL DEBT CEILING",
     "current_debt": "CURRENT DEBT",
     "base_rate": "BASE RATE",
@@ -124,8 +124,8 @@
     "no_wallet": "Not connected",
     "save_details": {
       "title": "Save Details",
-      "total_savings_dai": "Total Savings DAI",
-      "total_dai_supply": "Total DAI Supply"
+      "total_savings_dai": "Total Savings Dai",
+      "total_dai_supply": "Total Dai Supply"
     }
   },
   "cdp_create": {
@@ -133,8 +133,8 @@
     "select_text": "Each collateral type has its own risk parameters. You can lock up additional collateral types later.",
 
     "setup_proxy_title": "Vault Setup and Management",
-    "setup_proxy_proxy_text": "Setting up your vault will bundle multiple transactions into one, saving transaction time and gas costs. This only has to be done once.",
-    "setup_proxy_allowance_text": "This permission allows Maker smart contracts to interact with your {0}. This has to be done once for each new collateral type.",
+    "setup_proxy_proxy_text": "Configure your Vault for easy management. This only has to be done once.",
+    "setup_proxy_allowance_text": "This permission allows Oasis to interact with your {0}. This has to be done once for each new collateral type.",
     "setup_proxy_proxy_button": "Setup",
     "setup_proxy_allowance_button": "Set",
     "setup_vault": "Setup Vault",
@@ -142,37 +142,35 @@
     "deposit_title": "Deposit {0} and Generate Dai",
     "deposit_text": "Different collateral types have different risk parameters and collateralization ratios.",
     "deposit_sidebar_title": "{0} Risk Parameters",
-    "deposit_form_field1_title": "How much {0} would you like to lock in your CDP?",
+    "deposit_form_field1_title": "How much {0} would you like to lock in your Vault?",
     "deposit_form_field1_text": "The amount of {0} you lock up determines how much Dai you can generate.",
     "deposit_form_field2_title": "What target collateralization ratio would you like to stay above?",
-    "deposit_form_field2_text": "If your cdp drops below this target it will be considered {0} risk.",
+    "deposit_form_field2_text": "If your Vault drops below this target it will be considered {0} risk.",
     "deposit_form_field2_after": "Suggested:",
-    "deposit_form_field3_title": "How much DAI would you like to generate?",
+    "deposit_form_field3_title": "How much Dai would you like to generate?",
     "deposit_form_field3_text": "You should generate an amount that is safely above the liquidation ratio.",
     "deposit_form_field3_after1": "Max at target ratio",
     "deposit_form_field3_after2": "Max avail to generate",
 
     "confirm_title": "Confirm Vault Details",
-    "confirmed_title": "Your position is being created",
+    "confirmed_title": "Your Vault is being created",
     "confirmed_text": "The estimated time is {0}. You can safely leave this page.",
-    "post_confirmed_title": "Your position has been created",
+    "post_confirmed_title": "Your Vault has been created",
     "post_confirmed_text": "You can safely leave this page.",
-    "proxy_title": "Creating a proxy",
-    "proxy_text": "Before creating your first CDP, you must create a personal proxy contract.",
     "insufficient_ilk_balance": "Insufficient {0} balance",
-    "draw_too_much_dai": "CDP below liquidation threshold",
+    "draw_too_much_dai": "Vault below liquidation threshold",
     "stability_fee_description": "The fee calculated based on the outstanding debt of your vault. This is continuously added to your existing debt.",
     "liquidation_ratio_description": "The collateral-to-dai ratio at which the vault becomes vulnerable to liquidation.",
     "liquidation_penalty_description": "The fee that is added to the total outstanding DAI debt when a liquidation occurs.",
     "waiting_for_comfirmations": "Waiting for confirmations... {0} of {1}",
     "confirmed_with_confirmations": "Confirmed with {0} confirmations",
-    "waiting_for_confirmations_info": "Waiting for confirmations reduces the risk of your Maker Collateral Vault address changing. We require users to wait 10 block confirmations to ensure it's been created successfully. This will often take around 2 minutes.",
+    "waiting_for_confirmations_info": "Waiting for confirmations reduces the risk of your Vault address changing. We require users to wait 10 block confirmations to ensure it's been created successfully. This will often take around 2 minutes.",
     "proxy_failure_not_mined": "This transaction is taking longer than usual...",
     "proxy_failure_not_mined_info": "Transactions to the network may sometimes take longer than expected. This can be for a variety of reasons but may be due to a congested network or a transaction sent with a low gas price. Some wallets enable users to resend a transaction with a higher gas price, otherwise check for your transaction on etherscan and come back again later"
   },
   "cdp_migrate": {
-    "select_title": "Select CDP to Migrate",
-    "select_text": "Select a CDP and pay back the stability fee in DAI or MKR to migrate it to Multi-collateral Dai and the new CDP Portal.",
+    "select_title": "Select Vault to Migrate",
+    "select_text": "Select a Vault and pay back the stability fee in DAI or MKR to migrate it to Multi-collateral Dai and the new CDP Portal.",
     "current_ratio": "Current Ratio",
     "dai_debt": "Dai debt",
     "fee_in_dai": "Fee in Dai",
@@ -190,9 +188,9 @@
     "exit_to_cdp_portal": "Exit to CDP Portal"
   },
   "dsr_deposit": {
-    "open_vault": "Open your Maker Save Vault",
+    "open_vault": "Earn savings on your Dai by locking into Oasis Save",
     "deposit_form_title": "Enter the amount you would like to deposit.",
-    "setup_proxy_text": "Setting up your vault will bundle multiple transactions into one, saving transaction time and gas costs. This only has to be done once.",
+    "setup_proxy_text": "Setting up your proxy will bundle multiple transactions into one, saving transaction time and gas costs. This only has to be done once.",
     "confirm_title": "Confirm Deposit",
     "post_confirm_title": "Deposit Confirmed"
   },
@@ -223,7 +221,7 @@
     "generate_description": "How much DAI would you like to generate?",
     "payback_title": "Pay Back DAI",
     "payback_description": "How much DAI would you like to pay back?",
-    "cdp_below_threshold": "CDP below liquidation threshold",
+    "cdp_below_threshold": "Vault below liquidation threshold",
     "insufficient_balance": "Insufficient {0} balance",
     "cannot_payback_more_than_owed": "Cannot pay back more than owed",
     "dai_balance": "Your Dai balance",
@@ -258,7 +256,7 @@
     "description": "Receive interest on your Dai. Withdraw or top-up at any time.",
     "deposit_amount": "Deposit amount",
     "withdraw_amount": "Withdraw amount",
-    "deposit_dai": "Deposit DAI",
+    "deposit_dai": "Deposit Dai",
     "deposit_dai_subheading": "Start earning as soon as your deposit is confirmed.",
     "get_started_title": "Start earning on your Dai today"
   },
@@ -276,7 +274,7 @@
   "transactions": {
     "unlocking_token": "Unlocking {0}",
     "setting_up_proxy": "Setting up proxy",
-    "creating_cdp": "Creating CDP",
+    "creating_cdp": "Creating Vault",
     "generate_dai": "Generating DAI",
     "pay_back_dai": "Paying back DAI",
     "withdrawing_gem": "Withdrawing {0}",
@@ -288,12 +286,12 @@
     "is_float": "Please enter a valid number",
     "default": "Please enter a valid input"
   },
-  "cdp_type": "CDP Type",
+  "cdp_type": "Vault Type",
   "not_found": "Not Found",
   "network": "Network",
   "unknown": "Unknown",
-  "cdp": "CDP",
-  "cdp_id": "CDP ID",
+  "cdp": "Vault",
+  "cdp_id": "Vault ID",
   "connect": "Connect",
   "set_max": "Set max",
   "paste": "Paste",
@@ -303,7 +301,7 @@
   "collateral_debt_ceiling": "Debt ceiling",
   "dai_available": "DAI Available",
   "returned_auction": "returned from the auction",
-  "liquidated_event": "Your CDP has been liquidated",
+  "liquidated_event": "Your Vault has been liquidated",
   "liquidation_ratio": "Liquidation Ratio",
   "liquidation_price": "Liquidation price",
   "liquidation_penalty_shortened": "Liq Fee",
