--- a/src/languages/_chinese.json
+++ b/src/languages/_chinese.json
@@ -280,6 +280,7 @@
       "generate_dai": "生成 Dai",
       "confirmation": "确认"
     },
+    "dust_notification": "The dust limit for {0} is {1}. Please make sure you have enough collateral before continuing",
     "set_allowance": "许可资产",
     "seconds_wait_time": "秒",
     "minutes_wait_time_singular": "分钟",
