--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -328,7 +328,7 @@
     "collateralization_warning": "The amount of Dai you are generating is putting your Vault at risk of liquidation",
     "draw_too_much_dai": "Vault below liquidation threshold",
     "below_dust_limit": "A Vault requires a minimum of {0} Dai to be generated",
-    "dust_notification": "The dust limit for {0} is {1}. Please make sure you have enough collateral before continuing",
+    "dust_notification": "The dust limit for {0} vaults is {1} DAI. The dust limit is the minimum amount of DAI that can be generated in a vault. Please make sure you have enough collateral to generate at least this amount of DAI before continuing.",
     "dust_max_payback": "You can repay all your outstanding debt, or a maximum of {0} Dai",
     "dust_payback_below_limit": "Due to your Vault being below the minimum, you must repay all of your outstanding debt",
     "stability_fee_description": "The fee calculated based on the outstanding debt of your Vault. This is continuously added to your existing debt.",
